    o progress information: showing overall running time when completed

    o new names "$ref" and "$alt" are allowed in `seqGetData()`

    o move VariantAnnotation to the suggest field from the import field

    o remove an unused argument '.list_dup' in `seqBlockApply()`

    o fix the unexpected behaviors in `seqSetFilter(, action="push")` and
      `seqSetFilter(, action="push+intersect")`


CHANGES IN VERSION 1.16.0

-------------------------

    o a new argument 'intersect' in `seqSetFilter()` and `seqSetFilterChrom()`

    o a new function `seqSetFilterCond()`

    o `seqVCF2GDS()` allows arbitrary numbers of different alleles if REF and
      ALT in VCF are missing

    o optimize internal indexing for FORMAT annotations to avoid reloading
      the indexing from the GDS file

    o a new CITATION file

    o 'LZMA_RA' is the default compression method in `seqBED2GDS()` and
      `seqSNP2GDS()`

    o `seqVCF_Header()` correctly calculates ploidy with missing genotypes


CHANGES IN VERSION 1.15.0-1.15.6

-------------------------

    o the version number was bumped for the Bioconductor develop version 3.4


CHANGES IN VERSION 1.14.1
-------------------------

    o The default compression setting in `seqVCF2GDS()` and `seqMerge()` is
      changed from "ZIP_RA" to "LZMA_RA"

    o `seqVCF2GDS()`: variable-length encoding method is used to store
      integers in the FORMAT field of VCF files to reduce the file size and
      compression time


CHANGES IN VERSION 1.13.0-1.13.6
-------------------------

    o the version number was bumped for the Bioconductor develop version 3.4


CHANGES IN VERSION 1.12.0-1.12.9
-------------------------

    o the version number was bumped for the Bioconductor release version 3.3

    o `seqVCF_SampID()`, `seqVCF_Header()` and `seqVCF2GDS()` allow a
      connection object instead of a file name

    o "$num_allele" is allowed in `seqGetData()` and `seqApply()` (the numbers
      of distinct alleles)
